--- a/src/_includes/partials/story-card-entry.njk
+++ b/src/_includes/partials/story-card-entry.njk
@@ -1,5 +1,7 @@
 <li class="story-card" data-layout="stack" data-props="space:xs">
-    <div class="story-card__cover sans-serif" aria-hidden="true">
+    {% set color = entry.categories[0].color%}
+    {{color | log}}
+    <div class="story-card__cover" data-font="emoji" data-color="{{color}}" aria-hidden="true">
         <span data-heading="2">{{entry.icon if entry.icon else '📄'}}</span>
     </div>
     <a data-link="noHover" class="story-card__title" href="/{{ entry.slug }}">{{ entry.name }}</a>
