feat - font changed to Atkinson Hyperlegible

--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -1,9 +1,8 @@
 <header>
     <div class="padded-container header" data-layout="cluster" data-props="y:center x:between">
-        <a  data-link="noHover" data-heading="4" href="/">
+        <a  data-link="noHover" data-heading="5" href="/">
+            <b data-font="emoji">🎓</b>
             {{meta.site_name}}
-            {# 🎓 #}
         </a>
-
     </div>
 </header>
