--- a/src/css/_globals.css
+++ b/src/css/_globals.css
@@ -7,7 +7,7 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  font-family: var(--serif-font);
+  font-family: var(--font-body);
   font-size: var(--step-0);
   background-color: var(--color-light);
 }
