feat - update about page

--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -1,8 +1,10 @@
 <header>
-    <div class="padded-container header" data-layout="cluster" data-props="y:center x:between">
-        <a  data-link="noHover" data-heading="5" href="/">
-            <b data-font="emoji">🎓</b>
-            {{meta.site_name}}
+    <div class="padded-container header" data-layout="cluster" data-props="y:center x:between invert">
+        <a data-link="noHover" href="/">
+            <span aria-hidden="true" data-heading="4" data-font="emoji">🎓</span>
+            <span>
+                {{meta.site_name}}
+            </span>
         </a>
     </div>
 </header>
