--- a/src/css/_main.css
+++ b/src/css/_main.css
@@ -184,10 +184,11 @@ source: https://codepen.io/thierry/pen/qBqYmgw
 =============================================*/
 
 .story-card{
-  border: var(--border-thin) solid var(--gray-100);
+  border: var(--border-thin) solid var(--gray-200);
   padding: var(--space-s) var(--space-s);
   border-radius: var(--border-radius);
   position: relative;
+  background-color: var(--gray-50);
 
 }
 .story-card:hover,
@@ -195,12 +196,9 @@ source: https://codepen.io/thierry/pen/qBqYmgw
   border: var(--border-thin) solid var(--gray-400);
 
 }
-.story-card__cover{
-  height: calc(var(--space-2xl-3xl) * 2);
-  display: grid;
-  place-content: center;
-  background-color: var(--gray-200);
-}
+/* .story-card__cover{
+
+} */
 a.story-card__title::before{
   position: absolute;
   content: "";
