Breaking Changes - add contribution forms - Renamed properties for category and slugs - Added per story contribution form

--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -6,5 +6,8 @@
                 {{meta.site_name}}
             </span>
         </a>
+        <a data-link href="/about">
+            About
+        </a>
     </div>
 </header>
