--- a/src/pages/home-page.njk
+++ b/src/pages/home-page.njk
@@ -1,6 +1,6 @@
 ---
 layout: layouts/home-layout.njk
-title: "Research findings for the web"
+title: "Home"
 description: Collection of documented findings and insights on frontend development.
 about: >-
     Frontend Stories 2022 ©
